--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
         color: palevioletred;
     }
 
-    a:hover{
-        text-decoration: none;
-
+    a:link {
+  text-decoration: none;
     }
+
+   a:visited {
+  text-decoration: none;
+    }
+
+   a:hover {
+  text-decoration: underline;
+    }
+
+   a:active {
+  text-decoration: underline;
+   }
+    
    span     {
   float: left;
   width: 0.7em;
